@@ -1,5 +1,10 @@
 2000-04-13  Chema Celorio  <chema@celorio.com>
 
+	* print.c (print_setfont): new function
+	finish the printing prefs stuff
+
+2000-04-13  Chema Celorio  <chema@celorio.com>
+
 	* utils.c (gtk_radio_button_select): created, copied
 	from gnumeric
 	(gtk_radio_group_get_selected): ditto
